# samp-bscrashfix

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
docker/: build.sh
docker/build_ubuntu-18.04/: Dockerfile  docker-entrypoint.sh
src/: main.cpp
